更改数据储存方式，增加数据导入导出功能，支持文件系统访问AP。

--- a/admin.html
+++ b/admin.html
@@ -54,6 +54,9 @@
         <div class="panel-head">
           <h2>雪糕清单</h2>
           <div class="toolbar">
+            <span id="current-file" class="muted" style="margin-right:8px">(未选择)</span>
+            <button class="btn" id="choose-file">选择数据文件</button>
+            <button class="btn" id="create-file">新建数据文件</button>
             <input type="file" id="import-file" accept="application/json" hidden />
             <button class="btn" id="import-btn">导入</button>
             <button class="btn" id="export-btn">导出</button>
